cluster/production/devops/pgadmin/pgadmin-deploy/pgadmin-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 80
  selector:
    app: pgadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app: pgadmin        
    app.kubernetes.io/name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin        
        app.kubernetes.io/name: pgadmin
    spec:
      containers:
      - image: dpage/pgadmin4:latest
        imagePullPolicy: Always
        name: pgadmin
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-pgadmin-websecure
  namespace: pgadmin
  annotations:
    # For Homepage service discovery
    gethomepage.dev/href: "https://pgadmin.urbaman.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "pgAdmin is a popular open source administration and development platform for PostgreSQL."
    gethomepage.dev/group: DevOps
    gethomepage.dev/icon: pgadmin.svg
    gethomepage.dev/app: pgadmin # optional, may be needed if app.kubernetes.io/name != ingressRoute metadata.name
    gethomepage.dev/name: "pgAdmin"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin.urbaman.cloud`)
      services:
        - name: pgadmin
          port: 80
          serversTransport: traefik-pgadmin-transport
      middlewares:
        - name: security
          namespace: traefik
  tls:
    secretName: pgadmin-urbaman-cloud
    options:
      name: tlsoptions
      namespace: traefik
